--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "short_name": "PWA",
   "name": "PWA sample app",
-  "display": "fullscreen",
+  "display": "standalone",
   "start_url": "index.html",
   "icons": [
       {
