--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,14 @@
 {
+  "name": "PWA Offline Test",
   "short_name": "PWA",
-  "name": "PWA sample app",
-  "display": "standalone",
-  "start_url": "index.html",
   "icons": [
       {
-          "src": "images/icon.jpg",
-          "sizes": "192x192",
-          "type": "image/jpg"
+          "src": "/img/icon.png",
+          "sizes": "90x90",
+          "type": "image/png"
       }
-  ]
+  ],
+  "start_url": "/",
+  "display": "standalone",
+  "theme_color": "#99d9ea"
 }
